# elastisched

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.frontend.conf  notes.txt  pyproject.toml  requirements.txt  setup.py  setup.py.cpy  test.py
backend/: config.py  db.py  llm_router.py  main.py  models.py  preview.py  recurrence_router.py  router.py  schedule_router.py  schemas.py
backend/elastisched_api/: __init__.py  config.py  db.py  llm_router.py  main.py  mcp_server.py  models.py  preview.py  recurrence_router.py  router.py  schedule_router.py  schemas.py
backend/elastisched_api/llm/: __init__.py  base.py  gemini.py  runtime.py  tools.py
backend/llm/: __init__.py  gemini.py  runtime.py  tools.py
core/: blob.py  daytime.py  recurrence.py  schedule.py  timerange.py  utils.py
electron/: main.js  package-lock.json  package.json
engine/: CMakeLists.txt
engine/src/: Interval.hpp  IntervalMap.hpp  IntervalTree.hpp  Optimizer.hpp  SimulatedAnnealingOptimizer.hpp  constants.hpp  engine.cpp  engine.hpp  interval_tree.hpp  job.cpp  job.hpp  main.cpp  policy.cpp  policy.hpp  pybind_engine.cpp  pybind_scheduler.cpp  schedule.hpp  scheduler.hpp  tag.cpp  tag.hpp  tests.hpp  types.hpp
engine/src/utils/: DependencyChecker.hpp  IntervalMap.hpp  IntervalMapReference.hpp  IntervalTree.hpp
engine/tests/: doctest.h  tests.cpp
frontend/: app.js  constants.js  index.html  styles.css
frontend/css/: styles.css
frontend/js/: actions.js  api.js  app.js  constants.js  core.js  datetime_picker.js  dev-reload.js  dom.js  forms.js  history.js  popups.js  render.js  utils.js
integrations/: utils.py
landing/: TODO.txt  index.html  styles.css
learning/: TODO.txt  constants.py  embedding.py
mcp/: TODO.txt
src/: blob.py  constants.py  policy.py  recurrence.py  recurrent_blob.py  utils.py
src/elastisched/: __init__.py  blob.py  constants.py  daytime.py  policy.py  recurrence.py  schedule.py  tag.py  timerange.py  utils.py
src/elastisched/api/: __init__.py  config.py  db.py  main.py  models.py  recurrence_router.py  router.py  schedule_router.py  schemas.py
src/elastisched/engine/: CMakeLists.txt  constants.hpp  cost_function.h  cost_function.hpp  job.cpp  job.h  job.hpp  policy.c  policy.cpp  policy.h  policy.hpp  schedule.h  schedule.hpp  scheduler.c  scheduler.cpp  tag.h  tag.hpp  timerange.c  timerange.h
src/elastisched/engine/optimizer/: SimulatedAnnealingOptimizer.hpp
src/elastisched/engine/src/: bindings.cpp  constants.hpp  cost_function.cpp  cost_function.hpp  job.cpp  job.hpp  policy.cpp  policy.hpp  pybind_scheduler.cpp  schedule.cpp  schedule.hpp  scheduler.cpp  scheduler.hpp  tag.cpp  tag.hpp  test.cpp  tests.hpp
src/elastisched/engine/src-crewrite/: constants.h  container.c  container.h  cost_function.h  dll.c  dll.h  engine.c  engine.h  hash.h  interval.c  interval.h  job.c  job.h  map.c  map.h  policy.c  policy.h  schedule.c  schedule.h  simulated_annealer.h  tag.c  tag.h  topo_sort.c  topo_sort.h  utils.c  utils.h  vec.h
src/elastisched/engine/src/optimizer/: SimulatedAnnealingOptimizer.hpp
src/elastisched/engine/src/utils/: DependencyChecker.hpp  Interval.hpp  IntervalTree.hpp
src/elastisched/engine/utils/: IntervalTree.hpp  interval.cpp  interval.hpp  interval_tree.hpp
src/elastisched_engine/: blob.cpp  schedule.cpp  scheduler.cpp
tests/: conftest.py  constants.py  test_api.py  test_blob.py  test_cost_function.py  test_engine.py  test_recurrence_date.py  test_recurrence_delta.py  test_recurrence_multiple.py  test_recurrence_single.py  test_recurrence_weekly.py  test_schedule_workflow.py  test_single_occurrence.py  test_timerange.py  test_utils_round_datetime_future_bias.py
